--- a/index.html
+++ b/index.html
@@ -206,6 +206,21 @@
 
                         <hr>
                     </div>
+                    <div class="w3-container">
+                        <h4 class="w3-opacity">
+                            <b>bamazon: Store Manager (Node Application)</b>
+                        </h4>
+                        <h5>
+                            <ul>
+                                <li>
+                                    <a href="https://github.com/nickciambrone/bamazon">Code on GitHub</a>
+                                </li>
+                            </ul>
+                        </h5>
+
+
+                        <hr>
+                    </div>
 
 
                     <!-- End Right Column -->
