--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <h5>
                             <ul>
                                 <li>
-                                    <a href="https://alexjharrison.github.io/First-Group-Project/">Deployed Site</a>
+                                    <a href="https://alexjharrison.github.io/Jeopardy-Game/">Deployed Site</a>
                                 </li>
                                 <li>
                                     <a href="https://github.com/alexjharrison/First-Group-Project">Code on GitHub</a>
