--- a/index.html
+++ b/index.html
@@ -221,6 +221,24 @@
 
                         <hr>
                     </div>
+                    <div class="w3-container">
+                        <h4 class="w3-opacity">
+                            <b>friendFinder: Find out who in our database is the most alike with you!</b>
+                        </h4>
+                        <h5>
+                            <ul>
+                                <li>
+                                    <a href="https://whispering-mesa-99982.herokuapp.com/">Deployed Site</a>
+                                </li>
+                                <li>
+                                    <a href="https://whispering-mesa-99982.herokuapp.com/">https://github.com/nickciambrone/friendFinder</a>
+                                </li>
+                            </ul>
+                        </h5>
+
+
+                        <hr>
+                    </div>
 
 
                     <!-- End Right Column -->
