--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
                             <p>MERN Stack</p>
                             <p>Internet Marketing (SEO, Semantic HTML) </p>
                             <p>Adobe Photoshop</p>
-                            <p>Microsoft Excel</p>
                             </p>
                         </ul>
                         <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -231,7 +230,25 @@
                                     <a href="https://whispering-mesa-99982.herokuapp.com/">Deployed Site</a>
                                 </li>
                                 <li>
-                                    <a href="https://whispering-mesa-99982.herokuapp.com/">https://github.com/nickciambrone/friendFinder</a>
+                                    <a href="https://whispering-mesa-99982.herokuapp.com/">Code on GitHub</a>
+                                </li>
+                            </ul>
+                        </h5>
+
+
+                        <hr>
+                    </div>
+                    <div class="w3-container">
+                        <h4 class="w3-opacity">
+                            <b>Juicy Burger! A Full Stack Website</b>
+                        </h4>
+                        <h5>
+                            <ul>
+                                <li>
+                                    <a href="https://stormy-cove-57776.herokuapp.com/">Deployed Site</a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/nickciambrone/burger">Code on GitHub</a>
                                 </li>
                             </ul>
                         </h5>
