--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h5>
                             <ul>
                                 <li>
-                                    <a href="https://whispering-mesa-99982.herokuapp.com/">Deployed Site</a>
+                                    <a href="https://github.com/nickciambrone/friendFinder">Deployed Site</a>
                                 </li>
                                 <li>
                                     <a href="https://whispering-mesa-99982.herokuapp.com/">Code on GitHub</a>
