--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
                     </div>
                     <div class="w3-container">
                         <h4 class="w3-opacity">
-                            <b>friendFinder: Find out who in our database is the most alike with you!</b>
+                            <b>friendFinder: Find out who is the most alike with you!</b>
                         </h4>
                         <h5>
                             <ul>
                                 <li>
-                                    <a href="https://github.com/nickciambrone/friendFinder">Deployed Site</a>
+                                    <a href="https://whispering-mesa-99982.herokuapp.com/">Deployed Site</a>
                                 </li>
                                 <li>
-                                    <a href="https://whispering-mesa-99982.herokuapp.com/">Code on GitHub</a>
+                                    <a href="https://github.com/nickciambrone/friendFinder">Code on GitHub</a>
                                 </li>
                             </ul>
                         </h5>
