--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </div>
                     <div class="w3-container">
                         <h4 class="w3-opacity">
-                            <b>Juicy Burger! A Full Stack Website</b>
+                            <b>Juicy Burger! A Full Stack Web Application</b>
                         </h4>
                         <h5>
                             <ul>
